<resources>
    <string name="app_name">SkyWrite</string>
    <string name="title_home">Home</string>
    <string name="title_message">Message</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="title_gallery">Gallery</string>

    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Settings -->
    <string name="theme_id">themeID</string>
    <string name="dark_mode">darkMode</string>
    <string name="toggle_audio">toggleAudio</string>
    <string name="enter_uk_postcode">Enter UK postcode</string>
    <string name="send">Send</string>
    <string name="choose_a_message">Choose a message:</string>

    <!-- View Pager Activity -->
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>

    <!-- Firebase Cloud Messaging -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

</resources>